# openai-translation

./: .gitignore  README.md  note.txt  pyproject.toml
app/: crud.py  database.py  main.py  model.py  schemas.py  utils.py
app/templates/: index.html
